fix: update card overflow and stub search form query

--- a/src/components/MusicPlayer/MusicPlayer.scss
+++ b/src/components/MusicPlayer/MusicPlayer.scss
@@ -1,5 +1,4 @@
 .music-player {
   height: 410px;
   width: 60%;
-  overflow: scroll;
 }
