--- a/src/components/RelatedArtists/RelatedArtists.scss
+++ b/src/components/RelatedArtists/RelatedArtists.scss
@@ -2,7 +2,6 @@
   grid-auto-columns: min-content;
   height: 430px;
   width: 40%;
-  overflow: scroll;
 }
 
 .artist {
